deploy/dashboard/route-public.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dashboard-public
  namespace: ship-status
  labels:
    app: dashboard
spec:
  to:
    kind: Service
    name: dashboard
  port:
    targetPort: public
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
